--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,14 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
-
-$font: "Roboto";
-$bb_white: rgb(250,250,250);
+@use './variables';
 
 html, body {
     padding: 0px;
     margin: 0px;
-    font-family: $font;
+    font-family: variables.$font;
     overflow-x: hidden;
-    // background: #262626;
 }
 
 // .content-space {
