--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,3 +8,5 @@ $bb_grey: rgb(51,51,51);
 $bigs_red: rgb(213,0,50);
 $bigs_white: rgb(220,220,220);
 $bigs_blue: rgb(100, 151, 168);
+$dark-blue: #001A20;
+$grey: #D9D9D9;
