--- a/styles/landing.module.scss
+++ b/styles/landing.module.scss
@@ -1,6 +1,4 @@
 @use './variables';
-$black: #001A20;
-$grey: #D9D9D9;
 
 @mixin button_style {
     font-size: 1.25em;
@@ -74,7 +72,7 @@ $grey: #D9D9D9;
     }
 
     .grid_right {
-        background: $grey;
+        background: variables.$grey;
         pointer-events: none;
 
         &:hover > .grid_r_top {
@@ -89,14 +87,14 @@ $grey: #D9D9D9;
         .grid_r_top {
             display: flex;
             flex-direction: column;
-            background: $black;
+            background: variables.$dark-blue;
             height: 50%;
             transition: 0.7s ease-out;
             pointer-events: auto;
             justify-content: center;
             align-items: center;
             text-align: center;
-            color: $grey;
+            color: variables.$grey;
             
             &:hover {
                 height: 100%;
@@ -119,22 +117,22 @@ $grey: #D9D9D9;
                     opacity: 100%;  
 
                     &:hover {
-                        background: $grey;
-                        color: $black;
+                        background: variables.$grey;
+                        color: variables.$dark-blue;
                     }
                 }
             }
 
             .btn {
                 @include button_style();
-                border: 2px solid $grey;
-                color: $grey;
+                border: 2px solid variables.$grey;
+                color: variables.$grey;
             }
 
             .dot {
                 width: 50px;
                 height: 50px;
-                background-color: $grey;
+                background-color: variables.$grey;
                 border-radius: 50%;
                 position: absolute;
                 bottom: 50%;
@@ -146,7 +144,7 @@ $grey: #D9D9D9;
                 content: " ";
                 width: 100%;
                 height: 2px;
-                background-color: $grey;
+                background-color: variables.$grey;
                 margin: auto 0;
                 top: 0;
                 bottom: 0;
@@ -158,7 +156,7 @@ $grey: #D9D9D9;
         .grid_r_btm {
             display: flex;
             flex-direction: column;
-            background: $grey;
+            background: variables.$grey;
             height: 50%;
             pointer-events: auto;
             justify-content: center;
@@ -183,8 +181,8 @@ $grey: #D9D9D9;
                     opacity: 100%;
 
                     &:hover {
-                        background: $black;
-                        color: $grey;
+                        background: variables.$dark-blue;
+                        color: variables.$grey;
                     }
                 }
 
@@ -192,14 +190,14 @@ $grey: #D9D9D9;
 
             .btn {
                 @include button_style();
-                border: 2px solid $black;
-                color: $black
+                border: 2px solid variables.$dark-blue;
+                color: variables.$dark-blue;
             }
 
             .dot {
                 width: 50px;
                 height: 50px;
-                background-color: $black;
+                background-color: variables.$dark-blue;
                 border-radius: 50%;
                 position: absolute;
                 top: 50%;
@@ -211,7 +209,7 @@ $grey: #D9D9D9;
                 content: " ";
                 width: 100%;
                 height: 2px;
-                background-color: $black;
+                background-color: variables.$dark-blue;
                 margin: auto 0;
                 top: 0;
                 bottom: 0;
