--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -1,39 +1,73 @@
-$bb_yellow: rgb(255,215,0);
-$bb_grey: rgb(51,51,51);
-$bb_dark_grey: rgb(45,45,45);
-$bb_white: rgb(250,250,250);
+@use 'variables';
+
+@mixin hero_btn {
+    border-radius: 5px;
+    padding: 25px 40px;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+    transition: 0.3s;
+}
 
 .home_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: variables.$bb_font;
+    background: variables.$bb_black_2;
+    overflow: hidden;
+    min-height: calc(100vh - 48px - 220px);
 
-    .home_banner_wrapper {
+    .hero_wrapper {
         display: flex;
         flex-direction: row;
         position: relative;
-        color: white;
-        text-align: center;
-    
-        .home_banner_img {
-            filter: brightness(70%);    
-        }
+        width: 100%;
+        height: 95vh;
+
+        // box-shadow: inset 0px 0px 40vh 20vh rgba(0, 0, 0, 0.5);
+        align-items: center;
     
         .banner_content {
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            color: variables.$bb_yellow;
+            font-weight: 800;
+            font-style: italic;
+            margin-left: 15%;
+            text-transform: capitalize;
+            text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.7);
 
-            h1 {
-                color: $bb_white;
-                font-size: 56px;
-                text-shadow: 4px 4px 0px $bb_grey, 6px 6px 0px $bb_yellow;
+            .banner_image {
+                z-index: 0;
+                
+                & > span {
+                    background: black !important;
+                }
+
+                & > span > img{
+                    opacity: 70%;
+                }
             }
-            h2{
-                font-size: 32px;
-                text-shadow: 2px 2px $bb_grey;
+
+            p {
+                position: relative;
+                z-index: 1;
+                font-size: 92px;
+                margin: 0;
+            }
+            .btn1 {
+                @include hero_btn();
+                position: relative;
+                z-index: 1;
+                margin-top: 20px;
+                background-color: variables.$bb_yellow;
+                color: variables.$bb_black_2;      
+                border: none;
+                
+                &:hover {
+                    background-color: #A39800;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -41,34 +75,93 @@ $bb_white: rgb(250,250,250);
     .home_content_container {
         display: flex;
         flex-direction: row;
+        position: relative;
         width: 100%;
-        // position: relative;
+        height: 70vh;
+        justify-content: space-evenly;
+        align-items: center;
 
         .home_portal {
             display: flex;
-            flex: 1;
             flex-direction: column;
-            justify-content: center;
+            border-radius: 15px;
+            justify-content: flex-start;
             align-items: center;
             text-align: center;
-            padding-top: 8%;
-            padding-bottom: 8%;
-            background: $bb_grey;
-            color: white;
-            transition: all 0.25s;
+            width: 380px;
+            height: 470px;
+            background: variables.$bb_black_3;
+            cursor: pointer;
+            box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.5);
+            transition: 0.3s ease-out;
                 &:hover{
-                        // box-shadow: inset 0 0 3px;
-                        background: $bb_yellow;
-                        color:black;
+                        background: variables.$bb_yellow;
+                        
+                    .portal_container{
+                        color: variables.$bb_black_2;
+                    }
                 }
-        }
-        .home_portal:nth-child(even) {
-            background: $bb_dark_grey;
-            &:hover{
-                // box-shadow: inset 0 0 3px;
-                background: $bb_yellow;
-                color: black;
-        }
+
+            .image_container {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                border-radius: 15px 15px 0px 0px;
+                
+                img {
+                    border-radius: 15px 15px 0px 0px;
+                }
+            }
+            
+            .portal_container {
+                display: flex;
+                flex-direction: column;
+                box-sizing: border-box;
+                width: 100%;
+                height: 100%;
+                padding: 0px 25px 0 25px;
+                color: variables.$bigs_white;
+                overflow: hidden;
+
+                .card_title {
+                    text-transform: capitalize;
+                    font-size: 24px;
+                    font-weight: 800;
+                    font-style: italic;
+                    text-align: left;
+                    margin: 20px 0px 0px 0px;
+                    letter-spacing: 1px;
+                }
+
+                .description {
+                    height: 60%;
+                    overflow: hidden;
+
+                    p {
+                        font-family: variables.$reading-font;
+                        font-size: 18px;
+                        font-weight: 400;
+                        margin: 20px 0px 0px 0px;
+                        text-align: left;
+                    }
+                }
+
+                button {
+                    font-size: 16px;
+                    font-weight: 700;
+                    border: none;
+                    width: 30%;
+                    background: variables.$bb_yellow;
+                    border-radius: 10px;
+                    padding: 10px;
+                    margin-bottom: 15px;
+                    align-self: flex-end;
+                    cursor: pointer;
+                    text-transform: capitalize;
+                }
+             
+            }
+           
         }
     }
 
@@ -76,8 +169,11 @@ $bb_white: rgb(250,250,250);
         display:flex;
         flex-direction: row;
         width: 100%;
-        height: 5px;
-        background: rgb(255,215,0);
+        height: 8px;
+        background: variables.$bb_yellow;
+    }
+
+    a{
+        text-decoration: none;
     }
 }
-
