--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,800&display=swap');
 
-$font: "Open Sans";
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,600;0,700;0,800;1,400;1,700;1,800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+$font: "Open Sans", sans-serif;
+$bb_font: "Archivo", sans-serif;
+$reading-font: "Lato";
+
 
 // Color Themes
-$bb_yellow: rgb(255,215,0);
-$bb_grey: rgb(51,51,51);
+$bb_yellow: #CCBE00;
+$bb_black: #141300;
+$bb_black_2: #292826;
+$bb_black_3: #403E3B;
 $bigs_red: rgb(213,0,50);
 $bigs_white: rgb(220,220,220);
 $bigs_blue: rgb(100, 151, 168);
-$dark-blue: #001A20;
 $grey: #D9D9D9;
