--- a/styles/landing.module.scss
+++ b/styles/landing.module.scss
@@ -53,7 +53,7 @@
                 object-fit: cover;
                 aspect-ratio: 16/9;
                 opacity: 0;
-                transition: 0.7s ease-out;
+                transition: 0.4s ease-out;
             }
 
             .bigs_img {
@@ -66,7 +66,7 @@
                 object-fit: cover;
                 aspect-ratio: 16/9;
                 opacity: 0;
-                transition: 0.7s ease-out;
+                transition: 0.4s ease-out;
             }
         }
     }
@@ -87,7 +87,7 @@
         .grid_r_top {
             display: flex;
             flex-direction: column;
-            background: variables.$dark-blue;
+            background: variables.$bb_black;
             height: 50%;
             transition: 0.7s ease-out;
             pointer-events: auto;
@@ -98,9 +98,12 @@
             
             &:hover {
                 height: 100%;
+                background: variables.$bb_yellow;
+                color: variables.$bb_black;
 
                 & > h1:after {
                     width: 0;
+                    background-color: variables.$bb_black;
                 }
 
                 & > .dot {
@@ -117,16 +120,16 @@
                     opacity: 100%;  
 
                     &:hover {
-                        background: variables.$grey;
-                        color: variables.$dark-blue;
+                        background: variables.$bb_black;
+                        color: variables.$grey;
                     }
                 }
             }
 
             .btn {
                 @include button_style();
-                border: 2px solid variables.$grey;
-                color: variables.$grey;
+                border: 2px solid variables.$bb_black;
+                color: variables.$bb_black;
             }
 
             .dot {
@@ -157,6 +160,7 @@
             display: flex;
             flex-direction: column;
             background: variables.$grey;
+            color: variables.$bb_black;
             height: 50%;
             pointer-events: auto;
             justify-content: center;
@@ -181,7 +185,7 @@
                     opacity: 100%;
 
                     &:hover {
-                        background: variables.$dark-blue;
+                        background: variables.$bb_black;
                         color: variables.$grey;
                     }
                 }
@@ -190,14 +194,14 @@
 
             .btn {
                 @include button_style();
-                border: 2px solid variables.$dark-blue;
-                color: variables.$dark-blue;
+                border: 2px solid variables.$bb_black;
+                color: variables.$bb_black;
             }
 
             .dot {
                 width: 50px;
                 height: 50px;
-                background-color: variables.$dark-blue;
+                background-color: variables.$bb_black;
                 border-radius: 50%;
                 position: absolute;
                 top: 50%;
@@ -209,7 +213,7 @@
                 content: " ";
                 width: 100%;
                 height: 2px;
-                background-color: variables.$dark-blue;
+                background-color: variables.$bb_black;
                 margin: auto 0;
                 top: 0;
                 bottom: 0;
