--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@ $reading-font: "Lato";
 
 // Color Themes
 $bb_yellow: #CCBE00;
+$bb_yellow2: #E0D100;
 $bb_black: #141300;
 $bb_black_2: #292826;
 $bb_black_3: #403E3B;
