--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,7 @@ html, body {
     font-family: variables.$font;
     height: 100%;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 // .content-space {
