--- a/styles/subpages/gameSchedule.module.scss
+++ b/styles/subpages/gameSchedule.module.scss
@@ -1,3 +1,9 @@
-.header_wrapper {
-    width: 80% !important;
+.header__title {
+    width: 1600px !important;
+}
+
+.body {
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
 }
