--- a/styles/subpages/aboutUs.module.scss
+++ b/styles/subpages/aboutUs.module.scss
@@ -1,48 +1,52 @@
 @use '../variables';
 @use '../breakpoints';
 
-.section2 {
-    display: flex;
-    flex-direction: row;
+
+.body {
     width: 100%;
-    height: 50vh;
-    background: variables.$bigs_white;
-    align-items: center;
 
-    .section_text {
+    .body__list {
         display: flex;
-        flex-direction: column;
-        position: relative;
+        flex-direction: row;
         width: 100%;
-        height: 100%;
-        justify-content: center;
+        height: 50vh;
         align-items: center;
-
-        .content_wrapper {
-            width: 60%;
-            height: 90%;
+    
+        .body__text {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+    
+            .text__constrainer {
+                width: 60%;
+                height: 90%;
+                
+                p:first-of-type {
+                    font-family: variables.$reading-font;
+                    font-size: 30px;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                }
+                p {
+                    font-family: variables.$reading-font;
+                    font-size: 18px;
+                }
+            }
             
-            p:first-of-type {
-                font-family: variables.$reading-font;
-                font-size: 30px;
-                font-weight: 700;
-                text-transform: uppercase;
-            }
-            p {
-                font-family: variables.$reading-font;
-                font-size: 18px;
-            }
         }
-        
-    }
-
-    .section_img {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
+    
+        .body__img {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
