--- a/styles/template/subpages_layout.module.scss
+++ b/styles/template/subpages_layout.module.scss
@@ -1,7 +1,7 @@
 @use '../variables';
 @use '../breakpoints';
 
-.wrapper {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,7 +11,7 @@
     overflow: hidden;
     min-height: calc(100vh - 48px - 220px);
 
-    .section1 {
+    .header {
         display: flex;
         width: 100%;
         height: 50vh;
@@ -23,10 +23,10 @@
         overflow: hidden;
         white-space: nowrap;
         
-        .header_wrapper {
+        .header__title {
             display: flex;
             flex-direction: column;
-            width: 45%;
+            width: 1000px;
             height: 100%;
             justify-content: center;
             align-items: center;
