--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -1,7 +1,7 @@
 @use 'variables';
 @use 'breakpoints';
 
-@mixin hero_btn {
+@mixin hero_button_mixin {
     border-radius: 5px;
     padding: 25px 40px;
     text-transform: uppercase;
@@ -20,7 +20,7 @@
     overflow: hidden;
     min-height: calc(100vh - 48px - 220px);
 
-    .hero_wrapper {
+    .header {
         display: flex;
         flex-direction: row;
         position: relative;
@@ -30,15 +30,10 @@
         // box-shadow: inset 0px 0px 40vh 20vh rgba(0, 0, 0, 0.5);
         align-items: center;
     
-        .banner_content {
-            color: variables.$bb_yellow;
-            font-weight: 800;
-            font-style: italic;
+        .hero_wrapper {
             margin-left: 15%;
-            text-transform: capitalize;
-            text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.7);
 
-            .banner_image {
+            .hero__image {
                 z-index: 0;
                 
                 & > span {
@@ -53,11 +48,16 @@
             p {
                 position: relative;
                 z-index: 1;
-                font-size: 92px;
                 margin: 0;
+                color: variables.$bb_yellow;
+                font-size: 92px;
+                font-weight: 800;
+                font-style: italic;
+                text-transform: capitalize;
+                text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.7);
             }
-            .btn1 {
-                @include hero_btn();
+            .hero__btn {
+                @include hero_button_mixin();
                 position: relative;
                 z-index: 1;
                 margin-top: 20px;
@@ -73,7 +73,15 @@
         }
     }
 
-    .home_content_container {
+    .home_divider {
+        display:flex;
+        flex-direction: row;
+        width: 100%;
+        height: 8px;
+        background: variables.$bb_yellow;
+    }
+
+    .body {
         display: flex;
         flex-direction: row;
         position: relative;
@@ -82,7 +90,7 @@
         justify-content: space-evenly;
         align-items: center;
 
-        .home_portal {
+        .card {
             display: flex;
             flex-direction: column;
             border-radius: 15px;
@@ -103,7 +111,7 @@
                     }
                 }
 
-            .image_container {
+            .card__image {
                 position: relative;
                 width: 100%;
                 height: 100%;
@@ -114,7 +122,7 @@
                 }
             }
             
-            .portal_container {
+            .card__body {
                 display: flex;
                 flex-direction: column;
                 box-sizing: border-box;
@@ -124,7 +132,7 @@
                 color: variables.$bigs_white;
                 overflow: hidden;
 
-                .card_title {
+                .card__title {
                     text-transform: capitalize;
                     font-size: 24px;
                     font-weight: 800;
@@ -134,7 +142,7 @@
                     letter-spacing: 1px;
                 }
 
-                .description {
+                .card__description {
                     height: 60%;
                     overflow: hidden;
 
@@ -164,14 +172,6 @@
             }
            
         }
-    }
-
-    .divider {
-        display:flex;
-        flex-direction: row;
-        width: 100%;
-        height: 8px;
-        background: variables.$bb_yellow;
     }
 
     a{
