--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -106,7 +106,7 @@
                 &:hover{
                         background: variables.$bb_yellow;
                         
-                    .portal_container{
+                    .card__body{
                         color: variables.$bb_black_2;
                     }
                 }
