--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @use './variables';
+@use './breakpoints';
 
 html, body {
     padding: 0px;
@@ -9,54 +10,157 @@ html, body {
     // overflow-x: hidden;
 }
 
-// .content-space {
-//     flex-direction: column;
-//     min-height: 100%;
-// }
+.hamburger {
+    display: none;
+}
 
-nav {
-    // background-image: linear-gradient(to right, rgb(45,45,45,1) 75% , rgb(255,215,0,0.9));
-    background: variables.$bb_yellow;
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    display: flex;
-    z-index: 2;
-    height: 48px;
-    justify-content: center;
-    align-items: center;
-    color: variables.$bb_black_2;
-    font-family: variables.$bb_font;
-
-
-    .nav-container {
+@media screen and (max-width:breakpoints.$screen-sm-max) {
+    nav {
+        // background-image: linear-gradient(to right, rgb(45,45,45,1) 75% , rgb(255,215,0,0.9));
+        background: variables.$bb_yellow;
+        overflow: hidden;
+        position: fixed;
         width: 100%;
-        max-width: 80%;
         display: flex;
+        z-index: 2;
+        height: 38px;
+        justify-content: center;
         align-items: center;
+        color: variables.$bb_black_2;
+        font-family: variables.$bb_font;
+    
+        .nav-container {
+            width: 100%;
+            max-width: 90%;
+            display: flex;
+            align-items: center;
+    
+            .nav__logo  {
+                width: 40%;
+                margin-right: auto;
+            }
 
-        .logo  {
-            margin-right: auto;
-            a{
-                margin-left: 0px;
+            
+            a:not(.logo_tag) {
+                text-decoration: none;
+                text-transform: capitalize;
+                font-weight: 600;
+                font-size: 18px;
+                color: variables.$bigs_white;
             }
         }
-        a:not(.logo_tag) {
-            text-decoration: none;
-            text-transform: capitalize;
-            padding: 1rem 1rem;
-            font-weight: 600;
-            color: variables.$bb_black;
-            transition: 0.2s all ease-in-out;
 
-            &:hover {
-                // box-shadow: inset 100px 0 0 0 #54b3d6;
-                background: variables.$bb_black_2;
-                color: variables.$bigs_white;
+        .nav-menu{
+            display: none;
+        }
+
+        .nav-mobile__menu {
+            position: fixed;
+            left: 0%;
+            top: 38px;
+            gap: 40px;
+            width: 100%;
+            height: 40%;
+            display: flex;
+            flex-direction: column;
+            // padding: 30px 0px;
+            background-color: variables.$bb_black;
+            text-align: center;
+            justify-content: center;
+            transition: 0.3s;
+        }
+
+        @keyframes inAnimation {
+            0% {
+              opacity: 0;
+            }
+            100% {
+              opacity: 1;
+              visibility: visible;
+            }
+        }
+          
+        @keyframes outAnimation {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
+        .hamburger {
+            display: block;
+
+            &.clicked .bar:nth-child(2){
+                opacity: 0;
+            }
+            &.clicked .bar:nth-child(1){
+                transform: translateY(8px) rotate(45deg);
+            }
+            &.clicked .bar:nth-child(3){
+                transform: translateY(-8px) rotate(-45deg);
+            }
+
+            & .bar {
+                display:block;
+                width: 25px;
+                height: 3px;
+                margin: 5px auto;
+                -webkit-transition: all 0.3s ease-in-out;
+                transition: all 0.3s ease-in-out;
+                background-color: variables.$bb_black;
             }
         }
     }
 }
+
+@media screen and (min-width:breakpoints.$screen-lg-max) {
+    nav {
+        // background-image: linear-gradient(to right, rgb(45,45,45,1) 75% , rgb(255,215,0,0.9));
+        background: variables.$bb_yellow;
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        display: flex;
+        z-index: 2;
+        height: 48px;
+        justify-content: center;
+        align-items: center;
+        color: variables.$bb_black_2;
+        font-family: variables.$bb_font;
+    
+    
+        .nav-container {
+            width: 100%;
+            max-width: 80%;
+            display: flex;
+            align-items: center;
+    
+            .nav__logo  {
+                margin-right: auto;
+                a{
+                    margin-left: 0px;
+                }
+            }
+            a:not(.logo_tag) {
+                text-decoration: none;
+                text-transform: capitalize;
+                padding: 1rem 1rem;
+                font-weight: 600;
+                color: variables.$bb_black;
+                transition: 0.2s all ease-in-out;
+    
+                &:hover {
+                    background: variables.$bb_black_2;
+                    color: variables.$bigs_white;
+                }
+            }
+        }
+    }
+}
+
 
 .foot {
     // background: linear-gradient( to top, variables.$bb_black 75%, variables.$bb_black_2 100%) ;
