--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -3,9 +3,7 @@
 
 @mixin hero_button_mixin {
     border-radius: 5px;
-    padding: 25px 40px;
     text-transform: uppercase;
-    font-size: 20px;
     font-weight: 600;
     transition: 0.3s;
 }
@@ -13,23 +11,22 @@
 .home_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     font-family: variables.$bb_font;
     background: variables.$bb_black_2;
     overflow: hidden;
     min-height: calc(100vh - 48px - 220px);
 
+    a {
+        text-decoration: none;
+    }
+
     .header {
         display: flex;
         flex-direction: row;
         position: relative;
-        width: 100%;
-        height: 95vh;
-
-        // box-shadow: inset 0px 0px 40vh 20vh rgba(0, 0, 0, 0.5);
         align-items: center;
-    
+        width: 100%;
+
         .hero_wrapper {
             margin-left: 15%;
 
@@ -44,13 +41,11 @@
                     opacity: 70%;
                 }
             }
-
             p {
                 position: relative;
                 z-index: 1;
                 margin: 0;
                 color: variables.$bb_yellow;
-                font-size: 92px;
                 font-weight: 800;
                 font-style: italic;
                 text-transform: capitalize;
@@ -62,7 +57,8 @@
                 z-index: 1;
                 margin-top: 20px;
                 background-color: variables.$bb_yellow;
-                color: variables.$bb_black_2;      
+                color: variables.$bb_black_2;
+                font-family: variables.$bb-font;
                 border: none;
                 
                 &:hover {
@@ -73,26 +69,15 @@
         }
     }
 
-    .home_divider {
-        display:flex;
-        flex-direction: row;
-        width: 100%;
-        height: 8px;
-        background: variables.$bb_yellow;
-    }
-
     .body {
         display: flex;
-        flex-direction: row;
         position: relative;
         width: 100%;
-        height: 70vh;
         justify-content: space-evenly;
         align-items: center;
 
         .card {
             display: flex;
-            flex-direction: column;
             border-radius: 15px;
             justify-content: flex-start;
             align-items: center;
@@ -134,7 +119,6 @@
 
                 .card__title {
                     text-transform: capitalize;
-                    font-size: 24px;
                     font-weight: 800;
                     font-style: italic;
                     text-align: left;
@@ -148,7 +132,6 @@
 
                     p {
                         font-family: variables.$reading-font;
-                        font-size: 18px;
                         font-weight: 400;
                         margin: 20px 0px 0px 0px;
                         text-align: left;
@@ -156,10 +139,9 @@
                 }
 
                 button {
-                    font-size: 16px;
                     font-weight: 700;
                     border: none;
-                    width: 30%;
+                    width: 35%;
                     background: variables.$bb_yellow;
                     border-radius: 10px;
                     padding: 10px;
@@ -168,13 +150,111 @@
                     cursor: pointer;
                     text-transform: capitalize;
                 }
-             
-            }
-           
+            }      
         }
     }
 
-    a{
-        text-decoration: none;
+    .home_divider {
+        display:flex;
+        flex-direction: row;
+        width: 100%;
+        height: 8px;
+        background: variables.$bb_yellow;
+    }
+}
+
+@media screen and (max-width:breakpoints.$screen-sm-max) {
+    .header {
+        height: 60vh;
+        p {
+            font-size: 46px !important;
+        }
+        .hero__btn {
+            font-size: 16px;
+            padding: 15px 30px;
+        }
+    }
+
+    .body {
+        flex-direction: column;
+        gap: 30px;
+        margin: 30px 0px;   
+
+        .card {
+            flex-direction: column;
+            
+            .card__body {
+                display: flex;
+                flex-direction: column;
+                box-sizing: border-box;
+                width: 100%;
+                height: 100%;
+                padding: 0px 25px 0 25px;
+                color: variables.$bigs_white;
+                overflow: hidden;
+
+                .card__title {
+                    font-size: 24px;
+                }
+
+                .card__description {
+                    height: 60%;
+                    overflow: hidden;
+
+                    p {
+                        font-size: 18px;
+                    }
+                }
+
+                button {
+                    font-size: 18px;
+                }     
+            }      
+        }
+    }
+}
+
+
+@media screen and (min-width:breakpoints.$screen-lg-max) {
+
+    .header {
+        height: 95vh;
+            p {
+                font-size: 92px;
+            }
+            .hero__btn {
+                font-size: 20px;
+                padding: 25px 40px;
+            }
+        
+    }
+
+    .body {
+        flex-direction: row;
+        height: 70vh;
+        
+        .card {
+            flex-direction: column;
+            
+            .card__body {
+
+                .card__title {
+                    font-size: 24px;
+                }
+
+                .card__description {
+                    height: 60%;
+                    overflow: hidden;
+
+                    p {
+                        font-size: 18px;
+                    }
+                }
+
+                button {
+                    font-size: 18px;
+                }
+            }      
+        }
     }
 }
