--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -106,7 +106,6 @@
                     border-radius: 15px 15px 0px 0px;
                 }
             }
-            
             .card__body {
                 display: flex;
                 flex-direction: column;
@@ -166,12 +165,15 @@
 @media screen and (max-width:breakpoints.$screen-sm-max) {
     .header {
         height: 60vh;
-        p {
-            font-size: 46px !important;
-        }
-        .hero__btn {
-            font-size: 16px;
-            padding: 15px 30px;
+        .hero_wrapper {
+            margin-left: 7% !important;
+            p {
+                font-size: 46px !important;
+            }
+            .hero__btn {
+                font-size: 16px;
+                padding: 15px 30px;
+            }
         }
     }
 
@@ -184,14 +186,7 @@
             flex-direction: column;
             
             .card__body {
-                display: flex;
                 flex-direction: column;
-                box-sizing: border-box;
-                width: 100%;
-                height: 100%;
-                padding: 0px 25px 0 25px;
-                color: variables.$bigs_white;
-                overflow: hidden;
 
                 .card__title {
                     font-size: 24px;
