--- a/styles/subpages/aboutUs.module.scss
+++ b/styles/subpages/aboutUs.module.scss
@@ -7,9 +7,7 @@
 
     .body__list {
         display: flex;
-        flex-direction: row;
         width: 100%;
-        height: 50vh;
         align-items: center;
     
         .body__text {
@@ -20,10 +18,10 @@
             height: 100%;
             justify-content: center;
             align-items: center;
+            margin: 20px 0px;
     
             .text__constrainer {
                 width: 60%;
-                height: 90%;
                 
                 p:first-of-type {
                     font-family: variables.$reading-font;
@@ -44,9 +42,34 @@
             flex-direction: column;
             position: relative;
             width: 100%;
-            height: 100%;
             justify-content: center;
             align-items: center;
         }
     }
+}
+
+@media screen and (max-width:breakpoints.$screen-sm-max) {
+    .header__title {
+        width: 80% !important;
+    }
+
+    .body__list {
+        flex-direction: column;
+        height: 70vh;
+        .body__img{
+            height: 100%;
+        }
+    }
+    
+}
+
+@media screen and (min-width:breakpoints.$screen-lg-max) {
+    .body__list {
+        flex-direction: row;
+        height: 50vh;
+        .body__img{
+            height: 100%;
+        }
+    }
+   
 }
